--- a/EDI SI5 Promotion Check List/ProjectManager_Name.xaml
+++ b/EDI SI5 Promotion Check List/ProjectManager_Name.xaml
@@ -11,7 +11,7 @@
         <TextBox x:Name="txtName" TextAlignment="Center" HorizontalAlignment="Left" Height="26" Margin="30,75,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="257" BorderThickness="0,0,0,2"/>
         <Button x:Name="btnSubmit" Content="Save" HorizontalAlignment="Left" Height="27" Margin="110,222,0,0" VerticalAlignment="Top" Width="78" Click="btnSubmit_Click"/>
         <Label Content="Enter Your Email Address" HorizontalAlignment="Left" Margin="69,136,0,0" VerticalAlignment="Top" FontSize="14"/>
-        <TextBox x:Name="txtEmail" TextAlignment="Center" HorizontalAlignment="Left" Height="26" Margin="30,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="257" BorderThickness="0,0,0,2"/>
+        <TextBox x:Name="txtEmail" TextAlignment="Center" HorizontalAlignment="Left" Height="26" Margin="30,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="257" BorderThickness="0,0,0,2" KeyDown="txtEmail_KeyDown"/>
 
     </Grid>
 </Window>
